--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="title">Peek-A-Boo</h1>
     <h2 class="sub-title">Find and Match the Pair</h2>
     <div class="image-container">
-        <img src="/Assets/images/banner_image.jpg" alt="banner">
+        <img src="./Assets/images/banner_image.jpg" alt="banner">
         <div class="image-info-container">
             <div class="card-info">
                 Timer  <span id="time-left"> 100</span>
@@ -25,7 +25,7 @@
         </div>    
     </div>
     <video id="background-video" autoplay loop muted poster="/Assets/video.mp4">
-        <source src="/Assets/video.mp4" type="video/mp4">
+        <source src="./Assets/video.mp4" type="video/mp4">
     </video>
     <div class="display-text">
         <div class="overlay-text visible">
