change name files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="title">Peek-A-Boo</h1>
     <h2 class="sub-title">Find and Match the Pair</h2>
     <div class="image-container">
-        <img src="./Assets/images/banner_image.jpg" alt="banner">
+        <img src="./assets/images/banner_image.jpg" alt="banner">
         <div class="image-info-container">
             <div class="card-info">
                 Timer  <span id="time-left"> 100</span>
@@ -25,7 +25,7 @@
         </div>    
     </div>
     <video id="background-video" autoplay loop muted poster="/Assets/video.mp4">
-        <source src="./Assets/video.mp4" type="video/mp4">
+        <source src="./assets/video.mp4" type="video/mp4">
     </video>
     <div class="display-text">
         <div class="overlay-text visible">
@@ -41,130 +41,130 @@
 <div class="game-container">
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-1.png">
+            <img class="card-value" src="assets/images/img-1.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-2.png">
+            <img class="card-value" src="assets/images/img-2.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-3.png">
+        <img class="card-value" src="assets/images/img-3.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-4.png">
+        <img class="card-value" src="assets/images/img-4.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-5.png">
+        <img class="card-value" src="assets/images/img-5.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-6.png">
+        <img class="card-value" src="assets/images/img-6.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-7.png">
+        <img class="card-value" src="assets/images/img-7.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-        <img class="peekboo" src="Assets/images/card-back.jpeg">
+        <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-8.png">
+        <img class="card-value" src="assets/images/img-8.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-1.png">
+            <img class="card-value" src="assets/images/img-1.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-        <img class="card-value" src="Assets/images/img-2.png">
+        <img class="card-value" src="assets/images/img-2.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-3.png">
+            <img class="card-value" src="assets/images/img-3.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-4.png">
+            <img class="card-value" src="assets/images/img-4.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-5.png">
+            <img class="card-value" src="assets/images/img-5.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-6.png">
+            <img class="card-value" src="assets/images/img-6.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-7.png">
+            <img class="card-value" src="assets/images/img-7.png">
         </div>
     </div>
     <div class="card">
         <div class="card-back card-face">
-            <img class="peekboo" src="Assets/images/card-back.jpeg">
+            <img class="peekboo" src="assets/images/card-back.jpeg">
         </div>
         <div class="card-front card-face">
-            <img class="card-value" src="Assets/images/img-8.png">
+            <img class="card-value" src="assets/images/img-8.png">
         </div>
     </div>
 </div>
